--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,7 @@
   <!-- R.W. 11/10/2015 -->
   <link href="css/tabSlideBox.css" rel="stylesheet">
 
-  <!-- ionic/angularjs js -->
-  <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="lib/ionic/js/ionic.bundle.min.js"></script>
 
   <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
   <script src="lib/ngstorage/ngStorage.min.js"></script>
