--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
+  <script src="lib/lodash.min.js"></script>
   <script src="lib/ocLazyLoad.min.js"></script>
 
   <!-- your app's js -->
