--- a/www/app/apps/docApprove/HR/p3_moduleDocList.html
+++ b/www/app/apps/docApprove/HR/p3_moduleDocList.html
@@ -26,13 +26,14 @@
     </label>
 
     <ion-list>
-      <div ng-repeat="chat in chats">
-        <ion-item class="item-stable" ng-click="toggleGroup(chat.DOC_ID)" ng-class="{active: isGroupShown(chat.DOC_ID)}">
-          <a ng-class="isGroupShown(chat.DOC_ID) ? 'icon-expand' : 'icon-collapse'"></a>
-          <span class="item-title">{{chat.DOC_NAME}}&nbsp;({{chat.FORM_QTY}})</span>
+      <div class="docs-menu" ng-repeat="docsGroup in docsGroups">
+        <ion-item class="docs-menu-head item-stable" ng-click="toggleGroup(docsGroup.DOC_ID)" ng-class="{active: isGroupShown(docsGroup.DOC_ID)}">
+          <i ng-class="isGroupShown(docsGroup.DOC_ID) ? 'icon-expand' : 'icon-collapse'"> </i>
+          {{docsGroup.DOC_NAME}}
+          <span class="pel-badge">{{docsGroup.FORM_QTY}}</span>
         </ion-item>
 
-        <ion-item class="item-doc-list pele_rtl" ng-repeat="item in chat.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(chat.DOC_ID)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">
+        <ion-item class="item-doc-list pele_rtl" ng-repeat="item in docsGroup.DOCUMENTS.DOCUMENTS_ROW | filter:searchText.text" ng-show="isGroupShown(docsGroup.DOC_ID)" ng-click="forwardToDoc(item.DOC_ID, item.DOC_INIT_ID)">
           <img ng-src="img/DocApprove/document_redirect.png">
           <h2 class="pele_rtl">{{item.MESSAGE}}</h2>
           <h3>{{item.DOC_INIT_ID}}</h3>
