--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <meta name="format-detection" content="telephone=no">
+
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"> -->
   <title></title>
 
@@ -21,6 +23,7 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
+  <script src="lib/moment.min.js"></script>
   <script src="lib/lodash.min.js"></script>
   <script src="lib/ocLazyLoad.min.js"></script>
 
