WIP: shavit task

--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -14,7 +14,7 @@
         <div class="tsb-ic-wrp">
           <ion-scroll scrollX="false" direction="x" scrollY="false" class="tsb-hscroll">
             <a href="javascript:;" class="triangle-isosceles {{tab.icon}}" ng-repeat="tab in vm.tabs" on-finish-render="test()">
-              {{tab.text}} {{$index}}
+              {{tab.text}}
             </a>
           </ion-scroll>
         </div>
@@ -26,56 +26,49 @@
         <!-------------------------------------------------------------------------------->
         <ion-slide>
           <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
-            <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap">
-              <a class="item item-divider item-icon-right pele-item-icon-left">
-                <!-- <i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i> -->
-                <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
-                <p class="text-right pele_rtl">{{detail.SEQUENCE_NUM}}. {{detail.USER_NAME}}</p>
-                <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION , detail.ACTION_DATE , detail.NOTE)}}"></i>
-              </a>
-
-              <label class="item" ng-hide="hidenAcctionHistoryDetails(detail.SHOW_FLAG, detail.HIDEN_FLAG, detail.PUSH_COUNT , detail.NOTE)">
-              <div class="row">
-                <div class="col text-right pele_rtl">פעולה:</div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION}}</div>
+            <div class="list">
+              <div ng-repeat="action in vm.docDetails.ACTION_HISTORY" class="item pele_rtl" href="#">
+                <div class="item-icon-left item-icon-right text-right">
+                  <i class="icon ion-chatbubble-working"></i> {{action.APPROVAL_SEQ}}. {{action.USER_NAME}}
+                  <i class="icon ion-clipboard"></i>
+                </div>
+                <div class="item hide">
+                  <div class="row">
+                    <div class="col">פעולה:</div>
+                    <div class="col col-75">{{action.ACTION}}</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">תאריך:</div>
+                    <div class="col col-75">{{action.ACTION_DATE}}</div>
+                  </div>
+                  <div class="row">
+                    <div class="col">הערות:</div>
+                    <div class="col col-75 pele-item item-text-wrap">{{action.NOTE}}</div>
+                  </div>
+                </div>
               </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">תאריך:</div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION_DATE}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">הערות:</div>
-                <div class="col col-75 pele-item item-text-wrap text-right pele_rtl">{{detail.NOTE}}</div>
-              </div>
-            </label>
             </div>
+
           </ion-scroll>
         </ion-slide>
         <ion-slide>
           <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
-            <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
-              <a class="item item-divider item-icon-right pele-item-icon-left">
-                <!-- <i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i> -->
-                <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
-                <p class="text-right pele_rtl">{{detail.SEQUENCE_NUM}}. {{detail.USER_NAME}}</p>
-                <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION , detail.ACTION_DATE , detail.NOTE)}}"></i>
-              </a>
+            <ul class="list">
+              <li class="item no-border item-text-wrap">
+                <div class="item item-divider item-icon-right">
+                  <i class="icon ion-clipboard"></i>
+                  <h2 class="text-right pele_rtl">תיאור משימה</h2>
+                </div>
+                <div class="item no-border item-section pele_rtl item-text-wrap text-right">
 
-              <label class="item" ng-hide="hidenAcctionHistoryDetails(detail.SHOW_FLAG, detail.HIDEN_FLAG, detail.PUSH_COUNT , detail.NOTE)">
-              <div class="row">
-                <div class="col text-right pele_rtl">פעולה:</div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">תאריך:</div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION_DATE}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">הערות:</div>
-                <div class="col col-75 pele-item item-text-wrap text-right pele_rtl">{{detail.NOTE}}</div>
-              </div>
-            </label>
-            </div>
+                  ויקינגים (באנגלית: Vikings) היא דרמה היסטורית קנדית-אירית שנוצרה ונכתבה על ידי מייקל הירסט עבור ערוץ ההיסטוריה.הסדרה עלתה לשידור ב-3 במרץ 2013 בארצות הברית ובקנדה. הסדרה צולמה באירלנד בהשראת הסיפורים על הויקינג רגנאר לודברוק, אחד מגיבורי התרבות הנורדית
+                  הנודעים ביותר. הסדרה מציגה את רגנאר כחקלאי שעולה לגדולה לאחר פשיטות מוצלחות באנגליה ובסופו של דבר הופך למלך סקנדינביה בתמיכת משפחתו וחבריו הלוחמים - אחיו רולו, בנו ביורן צד-ברזל ונשותיו בתולת המגן לגרטה והנסיכה אסלוג. הסדרה חודשה במרץ
+                  2015 לעונה רביעית ארוכה מהרגיל הכוללת 20 פרקים, שעלתה לשידור ב-18 בפברואר 2016. ערוץ ההיסטוריה חידש את הסדרה לעונה חמישית במרץ 2016, שגם היא תכלול 20 פרקים. הסדרה הייתה מועמדת לפרסים רבים, בהם פרס אמי לאפקטים חזותיים לשנים 2013-‏2015,
+                  וזכתה בארבעה פרסי המסך הקנדיים לשנים 2015-‏2016 וכן ארבעה פרסי גילדת הבמאים של קנדה לשנים 2014-‏2015.
+
+                </div>
+              </li>
+            </ul>
           </ion-scroll>
         </ion-slide>
         <!------------------------------------------------------------------------------->
@@ -85,7 +78,7 @@
           <ion-scroll class="pele_rtl text-right" style="height:80%" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
             <ul class="list">
-              <li class="item">
+              <li class="item no-border">
                 <div class="item item-divider item-icon-right">
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">פרטי המשימה</h2>
@@ -99,35 +92,35 @@
                   <h2>האם משימה חוזרת : {{vm.docDetails.RETURN_TASK}}</h2>
                 </div>
               </li>
-              <li class="item">
+              <li class="item no-border">
                 <div class="item item-divider item-icon-right">
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">נתוני מערכת</h2>
                 </div>
-                <div class="item-section pele_rtl">
-                  <div class="" ng-repeat="item in vm.docDetails.SYSTEM_INFORMATION">
-                    <span>{{item.VALUE}}</span> : <span>{{item.PROMPT}}</span>
+                <div class="item-section">
+                  <div class="pele_rtl" ng-repeat="item in vm.docDetails.SYSTEM_INFORMATION">
+                    <span>{{item.PROMPT}} : <span>{{item.VALUE}}</span></span>
                   </div>
                 </div>
               </li>
-              <li class="item">
+              <li class="item no-border">
                 <div class="item item-divider item-icon-right">
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">נתונים נוספים</h2>
                 </div>
-                <div class="item-section pele_rtl">
+                <div class="item-section">
                   <div class="pele_rtl" ng-repeat="item in vm.docDetails.EXTRA_INFORMATION">
-                    <span>{{item.VALUE}}</span> : <span>{{item.PROMPT}}</span>
+                    <span>{{item.PROMPT}} : <span>{{item.VALUE}}</span></span>
                   </div>
                 </div>
               </li>
-              <li class="item">
+              <li class="item no-border">
                 <div class="item item-divider item-icon-right">
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">תיאור</h2>
                 </div>
               </li>
-              <li class="item">
+              <li class="item no-border">
                 <div class="item item-divider item-icon-right">
                   <i class="icon ion-clipboard"></i>
                   <h2 class="text-right pele_rtl">נספחי משימה</h2>
