fix bugs :iphone auto tel no conversion

--- a/www/app/apps/docApprove/PO/p3_po_moduleDocList.html
+++ b/www/app/apps/docApprove/PO/p3_po_moduleDocList.html
@@ -4,7 +4,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title"><strong>אישור הזמנת רכש</strong></div>
     </div>
   </ion-nav-title>
@@ -16,14 +16,8 @@
     <div ng-if="0" class="pele-page-title pele-img-size pele-page-title-font">
       <a class="description">אישור הזמנות רכש</a>
     </div>
-    <div class="list list-inset list-item-search">
-    <label class="item item-input item-search-new">
-      <input type="text" placeholder="חיפוש" ng-model="searchText.text" class="" ng-change="searchBarCreteria()">
-        <i class="icon ion-search placeholder-icon"></i>
-      </input>
-    </label>
-   </div>
-    <label ng-if="0" class="item item-input item-search" ng-click="searchBarCreteria()">
+
+    <label class="item item-input item-search" ng-click="searchBarCreteria()">
       <input type="search" class="search-area" style="color:#fafafa;" placeholder="חיפוש" ng-model="searchText.text">
       <a class="search-icon" ></a>
     </label>
