--- a/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
+++ b/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
@@ -1,13 +1,12 @@
 <ion-view class="feed-entries-view">
 
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
-      <div class="title" id="logo"> מסמך יזום {{INI_DOC_INIT_ID}}
-        <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
+    <div class="bar bar-header bar-positive">
+      <div class="title"> מסמך יזום {{INI_DOC_INIT_ID}}
       </div>
     </div>
   </ion-nav-title>
@@ -32,10 +31,10 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in INI_ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
-              <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )"  ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; " >
+              <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; ">
                 <!-- <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE)}}"></i> -->
                 <!--<i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i>-->
                 <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
@@ -78,45 +77,71 @@
                 </a>
               </div>
               <div class="row" ng-show="">
-                <div class="col text-right pele_rtl"><br></br></div>
+                <div class="col text-right pele_rtl"><br></br>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col text-right pele_rtl"><b>{{INITIATED_DETAILS_CUR.INI_DESCRIPTION_1}}</b></div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
-                <div class="col text-right pele_rtl"><br></br></div>
+                <div class="col text-right pele_rtl"><br></br>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_NAME_2}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">שם מסמך</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">שם מסמך</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_CREATION_DATE_3}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">תאריך יצירה</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">תאריך יצירה</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_PREPARER_NAME_4}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">יוזם</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">יוזם</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_NOTE_TO_APPROVER_5}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">הצדקת יזום</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">הצדקת יזום</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_VENDOR_NAME_6}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">ספק מומלץ</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">ספק מומלץ</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_CONTRACT_REQUIRED_7}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">חוזה תחזוקה</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">חוזה תחזוקה</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{INITIATED_DETAILS_CUR.INI_QUOTATION_EXISTS_8}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">הצעת מחיר</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">הצעת מחיר</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="INI_DETAILS_SHOW">
-                <div class="col col-75 text-right pele_rtl"><table><tr><td>{{INITIATED_DETAILS_CUR.INI_ESTIMATED_AMOUNT_9}}</td><td>&nbsp;</td><td>{{INITIATED_DETAILS_CUR.INI_CURRENCY_CODE_10}}</td></tr></table></div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">סכום משוער</b></div>
+                <div class="col col-75 text-right pele_rtl">
+                  <table>
+                    <tr>
+                      <td>{{INITIATED_DETAILS_CUR.INI_ESTIMATED_AMOUNT_9}}</td>
+                      <td>&nbsp;</td>
+                      <td>{{INITIATED_DETAILS_CUR.INI_CURRENCY_CODE_10}}</td>
+                    </tr>
+                  </table>
+                </div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">סכום משוער</b>
+                </div>
               </div>
 
 
