--- a/www/app/apps/docApprove/HR/p4_doc_806.html
+++ b/www/app/apps/docApprove/HR/p4_doc_806.html
@@ -1,6 +1,6 @@
 <ion-view class="feed-entries-view">
 
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
@@ -31,37 +31,9 @@
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
-        <!--
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
 
-          <div ng-repeat="detail in docDetails.ACTION_HISTORY" type="item-text-wrap" dir="RTL">
-
-            <a class="item item-divider item-icon-right">
-              <i class="icon ion-android-contact"></i>
-              <p class="text-right">{{detail.USER_NAME}}</p>
-            </a>
-
-            <label class="item" ng-hide="pelHideShow(detail.ACTION , detail.NOTE)">
-              <div class="row">
-                <div class="col text-right">פעולה : </div>
-                <div class="col col-75 text-right">{{detail.ACTION}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right">ת. פעולה : </div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION_DATE}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">הערות : </div>
-                <textarea class="col col-75 text-right pele_rtl" readonly="true">{{detail.NOTE}}</textarea>
-              </div>
-            </label>
-          </div>
-            </ion-scroll>
-        </ion-slide>
-        -->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
+        <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1;">
@@ -97,9 +69,9 @@
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
-    <!-- Refresh to get the new posts -->
+        <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+            <!-- Refresh to get the new posts -->
 
             <label class="item item-thumbnail-left">
               <img src="img/employees/worker.png">
@@ -110,11 +82,11 @@
               <h2 class="text-right pele_rtl">מחלקה : {{DEPARTMENT}}</h2>
               <h2 class="text-right pele_rtl">חטיבה : {{SECTOR}}</h2>
             </label>
-      <ul class="list">
-        <!---------------------------- 242 --------------------------------->
-        <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
+            <ul class="list">
+              <!---------------------------- 242 --------------------------------->
+              <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
 
-          <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.EFFECTIVE_DATE)">
+                <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.EFFECTIVE_DATE)">
             <i class="icon ion-android-calendar"></i>
             <p class="float-right">{{detail.EFFECTIVE_DATE}}</p>
             <span>יום: {{detail.ATTRIBUTE1}}</span>
@@ -123,7 +95,7 @@
               </span>
           <i ng-class="isGroupShown(detail.EFFECTIVE_DATE) ? 'icon-expand' : 'icon-collapse'"></i>
           </a>
-          <label class="item" ng-show="isGroupShown(detail.EFFECTIVE_DATE)">
+                <label class="item" ng-show="isGroupShown(detail.EFFECTIVE_DATE)">
             <div class="row">
               <div class="col col-30 text-right pele_rtl">שעת התחלה : </div>
               <div class="col col-78 text-right pele_rtl">{{detail.ATTRIBUTE2}}</div>
@@ -150,11 +122,11 @@
               </div>
             </div>
           </label>
-        </div>
-      </ul>
-     </ion-scroll>
-    </ion-slide>
-   </ion-slide-box>
+              </div>
+            </ul>
+          </ion-scroll>
+        </ion-slide>
+      </ion-slide-box>
 
   </ion-content>
   <!-- Footer Actions -->
