--- a/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
+++ b/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
@@ -30,7 +30,7 @@
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
-        <ion-slide>
+        <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
           <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in INI_ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
@@ -67,7 +67,7 @@
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
-        <ion-slide>
+        <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
           <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <ul class="list">
               <div type="item-text-wrap" ng-click="INI_DETAILS_SHOW = !INI_DETAILS_SHOW">
